added links to page sections on home page

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <ul class="nav text-end">
             <li class="nav-item">
 
-                <a class="nav-link px-2" href="#">About Me</a>
+                <a class="nav-link px-2" href="#about_me_section">About Me</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link px-2" href="#">Projects</a>
+                <a class="nav-link px-2" href="#project_section">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link px-2" href="#">Skills</a>
+                <a class="nav-link px-2" href="#skill_section">Skills</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link px-2" href="./contact.html">Contact</a>
@@ -45,7 +45,7 @@
                     <img src="./assets/images/myIsometric.jpg" alt="isometric image of me"
                         class="d-bloc mx-lg-auto img-fluid" width="700" height="500">
                 </div>
-                <div class="aboutMeText col-lg-6">
+                <div class="aboutMeText col-lg-6" id="about_me_section">
                     <h2>About Me</h2>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo earum debitis modi velit quae,
@@ -79,8 +79,8 @@
         </div>
 
 
-        <div class="container col-xxl-10 px-4 py-5">
-            <div class="projects-section ">
+        <div class="container col-xxl-10 px-4 py-5" id="project_section">
+            <div class="projects-section" >
                 <h2>Projects</h2>
                 <ul>
                     <li>
@@ -98,8 +98,8 @@
         </div>
 
 
-        <div class="container col-xxl-10 px-4 py-5">
-            <div class="skills-section row">
+        <div class="container col-xxl-10 px-4 py-5" id="skill_section">
+            <div class="skills-section row" >
                 <h2>Skills</h2>
                 <div class="skills-icons">
                     <i class="fa-brands fa-html5 p fa-5x"></i>
