--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
+    <div class="toTopBtn container col-xxl-10 px-4 py-5">
+        <button onclick="toTop()" type="button" class="btn btn-secondary btn-sm">Back To Top</button>
+    </div>
+
+
+    <script src="./script.js"></script>
 </body>
 
 
