--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Just an image -->
     <nav nav class="navbar navbar-light bg-light pe-4">
         <a class="navbar-brand" href="#">
-            <img src="/./assets/images/BopsCodeCademyPortfolio.png"  alt="">
+            <img src="/./assets/images/BopsCodeCademyPortfolio.png"  alt="myLogo">
         </a>
 
         <ul class="nav text-end">
